--- a/i3/config
+++ b/i3/config
@@ -163,7 +163,7 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 for_window [title="ImageMagick: qr.png"] fullscreen
-for_window [class="Chromium"] border no_title
+for_window [class="Chromium"] border 1pixel
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
