--- a/i3/config
+++ b/i3/config
@@ -11,6 +11,9 @@
 
 set $mod Mod4
 
+# start new workspaces on stacking layout
+workspace_layout stacking
+
 # font for window titles. ISO 10646 = Unicode
 font -misc-fixed-medium-r-normal--12-120-75-75-C-70-iso10646-1
 
